# RTC_C

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/: algorithms.h  canvas.h  color.h  geometries.h  globaldefs.h  intersections.h  matrix.h  ray.h  transformations.h  tuple.h
include/extras/: algorithms.h  globaldefs.h
include/graphics/: canvas.h  color.h  world.h
include/maths/: geometries.h  matrix.h  transformations.h  tuple.h
include/physics/: intersections.h  light.h  material.h  ray.h
src/: algorithms.c  canvas.c  geometries.c  globaldefs.c  intersections.c  matrix.c  ray.c  tuple.c
src/extras/: algorithms.c  globaldefs.c
src/graphics/: canvas.c  world.c
src/maths/: geometries.c  matrix.c  tuple.c
src/physics/: intersections.c  light.c  ray.c
tests/: canvastest.c  colortest.c  intersectionstest.c  lightingtest.c  main.c  materialstest.c  matrixtest.c  spheretest.c  transformationstest.c  tupletest.c  worldstest.c
